@@ -150,3 +150,6 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   resulting RPM includes all three builds (graphical, text, simple-text).
 * V1.21.13
 - Rework temp file bits to use mkstemp instead of tmpnam.
+- Reinstated MODE 7 width setting via VDU23,18,255 (from 1.21.7). Note that
+  it does not resize the window, and re-selecting MODE 7 restores the default
+  glyph width of 16.
